# RP2040_app_template

./: .clang-format  .clang-tidy  .clang-tidy copy  .gitignore  CMakeLists.txt  README.md  ozone.jdebug
.devcontainer/: Dockerfile  devcontainer.json
apps/blinky/: CMakeLists.txt
apps/template/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
